Fixing the carbon neutral span alignment

--- a/css/index.css
+++ b/css/index.css
@@ -302,7 +302,7 @@ footer > .not-for-mobile {
   margin-top: 1rem;
 }
 footer > .not-for-mobile :first-of-type {
-  margin-left: 43%;
+  margin-left: 47%;
 }
 footer div span::before {
   content: "";
